Update Tests to cover units

--- a/_includes/units.html
+++ b/_includes/units.html
@@ -8,8 +8,8 @@
     - unit: The unit abbreviation key (must exist in _data/units.yml) (required)
 
   Example usage:
-    {%- include formatted_unit.html number="3.8" unit="g" -%}
-    {%- include formatted_unit.html number="110" unit="F" -%}
+    {%- include units.html number="3.8" unit="g" -%}
+    {%- include units.html number="110" unit="F" -%}
 
   Requires:
     _data/units.yml file with unit definitions.
