--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,3 +1,6 @@
+// Use 'variables' and make its members available globally in this file
+@use "variables" as *;
+
 // Portraits
 .sidebar-portrait {
     position: relative;
