--- a/_sass/_linktree.scss
+++ b/_sass/_linktree.scss
@@ -1,3 +1,6 @@
+// Use 'variables' and make its members available globally in this file
+@use "variables" as *;
+
 // Linktree container
 .linktree-container {
   display: flex;
