--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -1,3 +1,6 @@
+// Use 'variables' and make its members available globally in this file
+@use "variables" as *;
+
 .resume {
   // Justify text
   p , li {
