--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,12 +4,12 @@
 @charset "utf-8";
 
 /* Must load variables first! */
-@import "variables";
+@use "variables" as *;
 
 /* Import partials from `site.sass_dir` */
-@import "poole";
-@import "share";
-@import "custom";
-@import "article_cards";
-@import "resume";
-@import "linktree";
+@use "poole";
+@use "share";
+@use "custom";
+@use "article_cards";
+@use "resume";
+@use "linktree";
