Replace auto card includes with direct calls and lookup tags
Removed intermediate "auto" include files used for rendering article
and book cards:
- `_includes/auto_article_card.html`
- `_includes/auto_article_card_from_object.html`
- `_includes/auto_book_card.html`
- `_includes/auto_book_card_from_object.html`

Updated templates and content to use more direct methods:

1.  In layouts and includes where the full post/book object was already
    available (e.g., loops in `front_page_feed.html`, `list_books_by_series.html`,
    `related_posts.html`, etc.), replaced calls to `auto_..._from_object.html`
    with direct calls to the base `article_card.html` or `book_card.html`
    includes, passing the necessary parameters explicitly from the object.

2.  In content files (posts) where cards were previously generated using
    an identifier (URL or Title) via `auto_article_card.html` or
    `auto_book_card.html`, replaced these includes with the corresponding
    lookup tags: `{% article_card_lookup %}` and `{% book_card_lookup %}`.

This change simplifies the include structure by removing redundant layers
and utilizes the dedicated lookup tags where appropriate.

--- a/_includes/front_page_feed.html
+++ b/_includes/front_page_feed.html
@@ -8,10 +8,23 @@ at the top. {% endcomment %}
   them now.{% endcomment %}
   {% if post.layout == 'book' %}
     {% comment %} Book card. {% endcomment %}
-    {% include auto_book_card_from_object.html book=post %}
+    {% include book_card.html
+      url=post.url
+      image=post.image
+      title=post.title
+      author=post.book_author
+      rating=post.rating
+      description=post.excerpt
+    %}
   {% elsif post.layout == 'post' %}
     {% comment %} Article cards. {% endcomment %}
-    {% include auto_article_card_from_object.html post=post %}
+    {% include article_card.html
+      url=post.url
+      image=post.image
+      image_alt=post.image_alt
+      title=post.title
+      description=post.description
+    %}
   {% endif %}
 {% endfor %}
 </div>
