--- a/_includes/list_books_by_series.html
+++ b/_includes/list_books_by_series.html
@@ -23,7 +23,14 @@ by series, the books within each series are already ordered correctly.
   {% if series_books.size > 0 %}
   <div class="card-grid">
       {% for book in series_books %}
-        {% include auto_book_card_from_object.html book=book %}
+        {% include book_card.html
+          url=book.url
+          image=book.image
+          title=book.title
+          author=book.book_author
+          rating=book.rating
+          description=book.excerpt
+        %}
       {% endfor %}
   </div>
   {% else %}
@@ -71,7 +78,14 @@ by series, the books within each series are already ordered correctly.
         {% comment %} Find the book object matching the original title {% endcomment %}
         {% for book in standalone_books_raw %}
           {% if book.title == original_title %}
-            {% include auto_book_card_from_object.html book=book %}
+            {% include book_card.html
+              url=book.url
+              image=book.image
+              title=book.title
+              author=book.book_author
+              rating=book.rating
+              description=book.excerpt
+            %}
             {% break %} {% comment %} Found the book, exit inner loop {% endcomment %}
           {% endif %}
         {% endfor %}
@@ -95,7 +109,14 @@ by series, the books within each series are already ordered correctly.
       {% endcomment %}
       {% assign series_books = relevant_books | where: "series", series %}
       {% for book in series_books %}
-        {% include auto_book_card_from_object.html book=book %}
+        {% include book_card.html
+          url=book.url
+          image=book.image
+          title=book.title
+          author=book.book_author
+          rating=book.rating
+          description=book.excerpt
+        %}
       {% endfor %}
   </div>
   {% endfor %}
