--- a/_includes/topic_posts_but_not_current.html
+++ b/_includes/topic_posts_but_not_current.html
@@ -6,7 +6,13 @@ Generate a list of posts from a topic, but excluding the current page.
   {% for post in site.categories[include.topic] %}
     {% if post.url != page.url %}
       {% comment %} Article cards with an image and description. {% endcomment %}
-      {% include auto_article_card_from_object.html post=post %}
+      {% include article_card.html
+        url=post.url
+        image=post.image
+        image_alt=post.image_alt
+        title=post.title
+        description=post.description
+      %}
     {% endif %}
   {% endfor %}
 </div>
