Replace related_books include with Ruby tag
Moves the logic for finding and displaying related books from the
`_includes/related_books.html` Liquid template into a new Ruby plugin,
`_plugins/related_books_tag.rb`.

This refactoring centralizes the logic in Ruby, improving
maintainability and leveraging Ruby's capabilities for data handling and
sorting. The new `{% related_books %}` tag replaces the previous `{%
include %}` call in the `_layouts/book.html` layout.

- Deleted `_includes/related_books.html`
- Created `_plugins/related_books_tag.rb`
- Updated `_layouts/book.html` to use `{% related_books %}`

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -64,4 +64,4 @@ don't find them.{% endcomment %}
 {% book_backlinks %}
 
 <!-- Related and Recent Books -->
-{% include related_books.html %}
+{% related_books %}
