--- a/_layouts/series_page.html
+++ b/_layouts/series_page.html
@@ -12,5 +12,5 @@ layout: default
   Below you'll find short reviews of the books from the series:
   <span class="book-series">{{ page.title }}</span>
 
-  {% include list_books_by_series.html series=page.title %}
+  {% display_books_for_series page.title %}
 </div>
