--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -9,13 +9,7 @@ layout: default
   <div class="card-grid">
     {% for post in site.categories[page.category-name] %}
       {% comment %} Article cards with an image and description. {% endcomment %}
-      {% include article_card.html
-        url=post.url
-        image=post.image
-        image_alt=post.image_alt
-        title=post.title
-        description=post.description
-      %}
+      {% render_article_card post %}
     {% endfor %}
   </div>
 </div>
