Add `tfoot` CSS and example

--- a/_sass/_poole.scss
+++ b/_sass/_poole.scss
@@ -83,6 +83,11 @@ thead {
   color: #303030;
 }
 
+tfoot {
+  border-top: 0.06em solid #515151;
+  color: #303030;
+}
+
 td,
 th {
   padding: 0.25em 0.5em;
