Change date range to use en dash

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -67,7 +67,7 @@
     {% comment %} Legal text {% endcomment %}
     <div>
       <small>
-      &copy;&nbsp;<time datetime="{{ '2016-01-01T00:00:00Z' | date_to_xmlschema }}">2016</time>–<time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> by {{ site.author.name }}
+      &copy;&nbsp;<time datetime="{{ '2016-01-01T00:00:00Z' | date_to_xmlschema }}">2016</time>&ndash;<time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> by {{ site.author.name }}
       </small>
     </div>
 
