Update author list formatting to use "et al." for 4+ authors
Modifies TextProcessingUtils.format_list_as_sentence to implement the
new author list display logic:

- 1 author: Author
- 2 authors: Author and Author
- 3 authors: Author, Author, and Author
- 4+ authors: Author <abbr class="etal">et al.</abbr>

Updates tests for TextProcessingUtils and DisplayAuthorsTag to reflect
this change.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -248,3 +248,15 @@ abbr.unit-abbr {
     cursor: help;
   }
 }
+
+// et al.
+abbr.etal {
+  border: none;
+  cursor: inherit;
+  font-style: italic;
+  font-variant: normal;
+  font-weight: normal;
+  font-size: inherit;
+  text-decoration: none;
+  text-transform: none;
+}
