Increase book image size and adjust for small screens
On small screens, the book cover image in a review now stops floating
to avoid cramming text around it

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -6,7 +6,7 @@ layout: default
   <h1 class="page-title"><cite class="book-title">{{ page.title }}</cite></h1>
 
   {% if page.image %}
-  <div class="floating-book-cover">
+  <div class="book-cover-float-container">
     <img class="book-cover-lead"
       src="{{ page.image }}"
       alt="Book cover of {{ page.title }}."
