--- a/_includes/books_topbar.html
+++ b/_includes/books_topbar.html
@@ -2,16 +2,13 @@
   <nav class="book-nav">
     {% comment %}
       The code below dynamically generates a topbar nav of pages in /books/
+      This now uses the pre-computed list from LinkCacheGenerator for performance.
     {% endcomment %}
-
-    {% assign sorted_nodes = site.pages | sort: "title" %}
 
     Sort by:
 
-    {% for node in sorted_nodes %}
-      {% if node.short_title != null
-        and node.book_topbar_include == true
-      %}
+    {% for node in site.data.link_cache.books_topbar_nav %}
+      {% if node.short_title != null %}
         <a class="book-nav-item {% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}{{ node.url }}">{{ node.short_title }}</a>
       {% endif %}
     {% endfor %}
