--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,14 +17,11 @@
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with `layout: page` in the front-matter.
+        This now uses the pre-computed list from LinkCacheGenerator for performance.
       {% endcomment %}
 
-      {% for node in site.pages %}
-        {% if node.title != null and node.sidebar_include == true %}
-          {% unless node.url contains "page" %} {% comment %} Paginated Blog pages should not be included in the sidebar. {% endcomment %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}{{ node.url }}">{{ node.title }}</a>
-          {% endunless %}
-        {% endif %}
+      {% for node in site.data.link_cache.sidebar_nav %}
+        <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}{{ node.url }}">{{ node.title }}</a>
       {% endfor %}
 
     </nav>
