Fix unit-abbr always being uppercase

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -263,6 +263,7 @@ abbr.unit-abbr {
   font-weight: normal;
   font-size: inherit;
   text-decoration: none;
+  text-transform: none;
 
   &[title] {
     cursor: help;
