--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -246,6 +246,14 @@ h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img,
   }
 }
 
+.series-mention-indicator {
+  /* Add a little extra space before the dagger */
+  margin-left: 0.05em;
+
+  /* This helps prevent the line height from shifting slightly. */
+  display: inline-block;
+}
+
 // OMEMO QR Code Images
 .omemo-qr-code {
   width: 200px;
